k8s/game-othello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-othello
  namespace: othello
spec:
  replicas: 2
  selector:
    matchLabels:
      app: game-othello
  template:
    metadata:
      labels:
        app: game-othello
    spec:
      containers:
      - name: game-othello
        image: game-othello:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /othello/actuator/health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: game-othello-service
  namespace: othello
spec:
  selector:
    app: game-othello
  ports:
  - port: 8080
    targetPort: 8080
