k8s/pvp-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pvp-service
  namespace: othello
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pvp-service
  template:
    metadata:
      labels:
        app: pvp-service
    spec:
      containers:
      - name: pvp-service
        image: pvp-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: pvp-service
  namespace: othello
spec:
  selector:
    app: pvp-service
  ports:
  - port: 8084
    targetPort: 8084
